# eth_fetcher

./: .env.example  Cargo.toml  README.md  dockerfile
src/: config.rs  main.rs
src/routes/: all.rs  auth.rs  eth.rs  mod.rs
src/utils/: auth.rs  chain.rs  db.rs  misc.rs  mod.rs  rlp.rs  structs.rs
src/utils/db/: mod.rs  set_up.rs  transaction.rs  user.rs
src/utils/structs/: auth.rs  transaction.rs
